2003-12-26 Seth Burgess <sjburges@gimp.org>
	* examples/glowing_steel: changed color specifiers to be 0-1.0

2003-12-24 Seth Burgess <sjburges@gimp.org>
	
	* UI/UI.pm: forgot this one.  
	Removed camel logo.  I don't want users to be aware of a difference.

	s/get_name/drawable_get_name/
	s/patterns_list/patterns_list("")/
	s/gradients_get_list/gradients_get_list("")/
	
2003-12-24 Seth Burgess <sjburges@gimp.org>

	* I'm taking over maintainence of gimp-perl for now, knowing little
	about perl packages or some of the deeper magick in gimp-perl.  
	Any assistance is appreciated.
	
	* Changes: This file will now be in a gimp-like Changelog format,
	that will record changes a little better than the previous method 
	(see below).

	* Gimp/Util.pm: s/->image/->get_image/, 
	                s/set_visible/drawable_set_visible/
	* Gimp/Lib.xs: s/drawable_image_id/drawable_get_image/
	* Gimp/Feature.pm: removed Gtk package references, replaced with Gtk2
	
	* examples/examples.TODO: added.  Keep track of testing of 
	scripts and plans for their futures.

        * examples/Create_Images
	* examples/alpha2color
	* examples/blended2
	* examples/bricks
	* examples/circular_text
	* examples/ditherize
	* examples/dots
	* examples/fade-alpha
	* examples/feedback
	* examples/fire
	* examples/fit-text
	* examples/frame_filter
	* examples/gimpmagick
	* examples/glowing_steel
	* examples/image_tile
	* examples/logulator
	* examples/parasite-editor
	* examples/perlotine
	* examples/prep4gif
	* examples/randomart1
	* examples/randomblends
	* examples/roundsel
	* examples/sethspin
	* examples/tex-to-float
	* examples/translogo
	* examples/xachlego
	* examples/xachshadow
	* examples/xachvision 
	* examples/yinyang: 
	  removal of 'running under a shell' check; these are added at 
	  installation-time, so were double-checked after install.

	  s/gimp_image_active_drawable/gimp_image_get_active_drawable/
          s/undo_push_group_start/undo_group_start/